rabbitmq/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: mycluster.icp:8500/default/docker_hub_id/rabbitmq:v0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5672
        - containerPort: 15672
